updated HTTP Kit WS example to latest Luminus